# MANIFOLD

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SCIENTIFIC_PAPER.md  SConstruct  STRUCTURE.md  build_windows.bat  commit_msg.txt  compile_cuda_11.8.bat  compile_cuda_12.9.bat  compile_cuda_kernels.bat  debug_parity_binary.py  diagnose_binding.py  inspect_checkpoint.py  plan.md  precompile_kernels_once.bat  pyproject.toml  repro_error.py  requirements.txt  setup.py  t.xt  train_innovation.py
data/: README.md  math_10k.txt
demos/: fractal_recall_demo.py
docs/: 00_FOUNDATIONAL_HYPOTHESIS.md  01_HYPER_TORUS.md  02_REACTIVE_GEOMETRY.md  03_THERMODYNAMIC_GATING.md  04_SYMPLECTIC_ATTENTION.md  05_HOLOGRAPHIC_LATENT_SPACE.md  06_SEMANTIC_EVENT_HORIZONS.md  07_RECURSIVE_MANIFOLD_RESOLVERS.md  08_PHYSICALITY_OF_CONFUSION.md  10_IMPLICIT_NEURAL_FIELDS.md  11_EXOTIC_SYMPLECTIC_INTEGRATORS.md  12_PARALLEL_MANIFOLD_SCANS.md  13_GEOMETRIC_COUPLING_FLOWS.md  14_PIECEWISE_RIEMANNIAN_VARIETIES.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  BRANDING.md  COMPONENTS.md  CONCEPTS.md  CONFIGURATION.md  FUTURE_CONCEPTS.md  IMPLEMENTATION_GUIDE.md  JUSTIFICATION.md  MODELS_AND_MECHANICS.md  MODELS_ROADMAP.md  NEW_SCIENTIFIC_PAPER.md  PAPER_DRAFT.md  PHASE_12_INF.md  PHYSICS.md  README.md  SCIENTIFIC_PAPER.md  TECHNICAL_BEHAVIOR_LOG.md  TECHNICAL_HANDBOOK.md  TRAINING.md
examples/: load_checkpoint.py
gfn/: __init__.py  adjoint.py  embeddings.py  losses.py  mixed_dataset.py  model.py  optim.py  readout.py  safety.py  visualize.py
scripts/: tests.py  (+9 more)
(+291 files in other folders)
