[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfn"
version = "1.0.0"
description = "Geodesic Flow Networks: Sequence modeling via Riemannian manifolds"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GFN Research Group"}
]
requires-python = ">=3.10"
keywords = ["deep-learning", "transformers", "riemannian-geometry", "sequence-modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/gfn-research/gfn"
Documentation = "https://github.com/gfn-research/gfn/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["gfn*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
